deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skillludo
