deploy/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: mysql-private, namespace: skillludo}
spec:
  podSelector:
    matchLabels: {app: skillludo-mysql}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels: {app: skillludo-server}
      ports:
        - {protocol: TCP, port: 3306}
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: server-network, namespace: skillludo}
spec:
  podSelector:
    matchLabels: {app: skillludo-server}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: kube-system}
          podSelector:
            matchLabels: {app.kubernetes.io/name: traefik}
        - podSelector:
            matchLabels: {app: skillludo-load}
      ports:
        - {protocol: TCP, port: 3000}
  egress:
    - to:
        - ipBlock: {cidr: 0.0.0.0/0}
      ports:
        - {protocol: TCP, port: 465}
    - to:
        - podSelector:
            matchLabels: {app: skillludo-mysql}
      ports:
        - {protocol: TCP, port: 3306}
    - to:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: kube-system}
          podSelector:
            matchLabels: {k8s-app: kube-dns}
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
